--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>macOS merge copy</title>
+    <meta property="og:title" content="macOS merge copy" />
+    <meta name="author" content="pilisir.tw@gmail.com" />
+    <meta name="description" content="Do Real Merge and Copy with a simple service on macOS Finder, just like Windows or Linux. 讓 macOS 在複製貼上時，做真正的資料合併，就像 Windows 和 Linux 一樣。" />
+    <meta property="og:description" content="Do Real Merge and Copy with a simple service on macOS Finder, just like Windows or Linux. 讓 macOS 在複製貼上時，做真正的資料合併，就像 Windows 和 Linux 一樣。" />
+    <link rel="canonical" href="https://pilisir.github.io/macOS_merge_copy/" />
+    <meta property="og:url" content="https://pilisir.github.io/macOS_merge_copy/" />
+    <meta property="og:site_name" content="macOS merge copy" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@macOS merge copy" />
+    <meta name="twitter:creator" content="@pilisir.tw@gmail.com" />
+    <script type="application/ld+json">
+    {"@type":"WebSite","url":"https://pilisir.github.io/macOS_merge_copy/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://pilisir.github.io/macOS_merge_copy/pages/image/icon.png"},"name":"pilisir.tw@gmail.com"},"name":"macOS merge copy","headline":"macOS merge copy","author":{"@type":"Person","name":"pilisir.tw@gmail.com"},"description":"Do Real Merge and Copy with a simple service on macOS Finder, just like Windows or Linux. 讓 macOS 在複製貼上時，做真正的資料合併，就像 Windows 和 Linux 一樣。","@context":"http://schema.org"}</script>
+
+    <meta name="copyright" content="pilisir.tw@gmail.com">
+    <meta name="keywords" content="macOS merge copy, copy, merge, replace, paste, 複製, 貼上, 取代, 合併">
+
+    <meta name="msvalidate.01" content="EAFF55A082EFA0BB7FF4D18F28E6DC52" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>macOS merge copy</title>
+
+    <link rel="Shortcut Icon" type="image/x-icon" href="pages/image/icon.png" />
 
     <link rel="stylesheet" href="pages/css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="pages/css/main.min.css">
