--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <meta name="copyright" content="pilisir.tw@gmail.com">
     <meta name="keywords" content="macOS merge copy, copy, merge, replace, paste, 複製, 貼上, 取代, 合併">
-
+    <meta name="google-site-verification" content="XhLAuU-iTKIGQFzWIHZzSAxywSxkUyG2V8owVEiUXsg" />
     <meta name="msvalidate.01" content="EAFF55A082EFA0BB7FF4D18F28E6DC52" />
 
     <meta charset="UTF-8">
